# GeMSE_toolkit

./: .gitignore  404.html  HISTORY.rst  LICENSE  README.md  README.rst  cli-scetch.md  demo-schema.md  energy_resolution.cxx  get_calibration_function.cxx  goal.md  index.html  install.sh  macros.h  merge_simulated_efficiencies.cxx  merge_simulated_efficiencies_adjustTl208BR.cxx  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
analyze-spectrum/: index.html
common/: create-env.sh  lib.sh  versions.sh
containers/gemse-environment/: Dockerfile  create-env  requirements.txt
cpp/gemse-mc/: .bumpversion.cfg  .gitignore  GeMSE_MC.cc  Makefile  README.md
cpp/gemse-root-scripts/: .gitignore  Makefile  energy_resolution_manual.cxx  get_efficiencies_from_rootfile.cxx  (+3 more)
dev/: index.html
docker/: Dockerfile
docs/: analyze-spectrum.md  index.md  run-environment.md
gemsepyana/: annotate_calibrated_histogram_uproot.py  annotate_using_bat_inputs.py  gemse.mplstyle  helpers.py
include/: GeMSE_Analysis.hh  GeMSE_DetectorConstruction.hh  GeMSE_MVSensitiveDetector.hh  GeMSE_PhysicsList.hh  GeMSE_PrimaryGeneratorAction.hh  GeMSE_RunMessenger.hh
linux/: install_deps.sh  install_docker_env.sh  install_source.sh
macos/: macos_install.sh  macos_post_setup.sh
macros/: geantino_confine.mac
run-environment/: index.html
sample_geometries/: CBSS2_source.cc  vda_cavern_deprecated.cc
search/: search_index.json
src/: ConstructPmtHolders.cc  GeMSE_MVHit.cc  GeMSE_MVSensitiveDetector.cc  GeMSE_PhysicsList.cc  GeMSE_PrimaryGeneratorAction.cc  GeMSE_RunAction.cc
(+59 files in other folders)
